--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="w3-container w3-center">
   <hr>
-  <h3>Paper-like Cards with Shadows</h3>
+  <h3>Principles of Graphic Design </h3>
 </div>
 
 <div class="w3-row-padding"> 
