--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="w3-container w3-center">
   <hr>
-  <h3>Principles of Graphic Design </h3>
+  <h1>PRINCIPLE OF GRAPHIC DESIGN </h1>
 </div>
 
 <div class="w3-row-padding"> 
@@ -26,7 +26,9 @@
 <div class="w3-card">
   <img src="860.jpg" alt="Car" style="width:100%">
   <div class="w3-container">
-  <p>Graphic design is also closely related to emotional design, 
+  <h1>GRAPHIC  </h1>
+
+     <p>Graphic design is also closely related to emotional design, 
     as designers must consider the emotions, expectations and
     beliefs of the viewer when creating images. This is where 
     color theory comes into play, as the chosen color palette 
@@ -34,9 +36,7 @@
     influences their emotional response to the design. For example, 
     red is a color often seen as a symbol of danger or alarm, 
     while blue is associated with the sea and sky and 
-    therefore encourages a calmer response.
-
-  </p>
+    therefore encourages a calmer response. </p>
   
 </div>
 </div>
@@ -46,13 +46,17 @@
 <div class="w3-card-4">
   <img src="29.jpg" alt="Car" style="width:100%">
   <div class="w3-container">
-  <p> Graphic design plays an important role in the way consumers interact with, 
+  <h1>DESIGN  </h1>
+
+ <p> Graphic design plays an important role in the way consumers interact with, 
     perceive and experience your brand. Therefore, it is important that you not 
     only understand the practice but also implement it in your company. Additionally, 
     the elements and principles of graphic design are applied to 
     communicate specific messages, establish brand identity, attract target audiences, 
     and improve user experience. 
     All of this is necessary for your business to not only survive, but thrive. </p>
+
+    
   </div>
 </div>
 </div>
@@ -61,7 +65,9 @@
 <div class="w3-card-4">
   <img src="60.jpg" alt="Car" style="width:100%">
   <div class="w3-container">
-  <p> Your logo differentiates your company from its competitors and is the most 
+  <h1> LOGO </h1>
+
+ <p> Your logo differentiates your company from its competitors and is the most 
     important design element that represents your brand. It is often the
      first thing a target customer sees regarding your business and 
      therefore has the opportunity to make a good first impression and 
@@ -70,6 +76,8 @@
      plays a crucial role. Graphic design uses color theory to ensure 
      that your logo's color palette conveys the right message to the right audience and
      evokes the emotions you want them to feel when interacting with your brand.</p>
+
+    
   </div>
 </div>
 </div>
