--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     red is a color often seen as a symbol of danger or alarm, 
     while blue is associated with the sea and sky and 
     therefore encourages a calmer response. </p>
+
+
+    <p><a href=" https://www.bitews.com/store" class="w3-button w3-blue"><i class=" fa fa-diamond w3-text-white"> </i> Let's Get Started</a></p>
+  
   
 </div>
 </div>
@@ -55,6 +59,11 @@
     communicate specific messages, establish brand identity, attract target audiences, 
     and improve user experience. 
     All of this is necessary for your business to not only survive, but thrive. </p>
+
+
+     <p><a href=" https://www.bitews.com/order" class="w3-button w3-green"><i class="fa fa-globe w3-text-amber"> </i> Let's Get Started</a></p>
+  
+  
 
     
   </div>
@@ -77,6 +86,7 @@
      that your logo's color palette conveys the right message to the right audience and
      evokes the emotions you want them to feel when interacting with your brand.</p>
 
+    <p><a href=" https://www.bitews.com/design" class="w3-button w3-pink"><i class=" fa fa-cloud w3-text-blue "> </i> Let's Get Started</a></p>
     
   </div>
 </div>
