--- a/index.html
+++ b/index.html
@@ -10,14 +10,50 @@
 </head>
 <body>
 
+ <!-- Text DISABLE start HERE-->
 
+ <!DOCTYPE html>
+ <html>
+ 
+ 
+ <head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Disable cut copy paste</title>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+ 
+ </head>
+ <body>
+   
+   
+ <p class="code"><br>
+ 
+   <script type="text/javascript">
+   
+     $(document).ready(function() {
+       $('body').bind('cut copy paste', function (e) {
+         e.preventDefault();
+       })
+       $(".code").on("contextmenu", function(e) {
+         return false;
+       })
+     })
+     
+     </script>
+ 
+ 
+ </body>
+ </html>
+ 
+ 
+ <!-- Text DISABLE end HERE-->
 
 
 <!-- Start 3 picture area -->
 
 <div class="w3-container w3-center">
   <hr>
-  <h5>PRINCIPLE OF GRAPHIC DESIGN </h5>
+  <h5  class="code"  >PRINCIPLE OF GRAPHIC DESIGN   <br> </h5>
 </div>
 
 <div class="w3-row-padding"> 
@@ -26,9 +62,9 @@
 <div class="w3-card">
   <img src="860.jpg" alt="Car" style="width:100%">
   <div class="w3-container">
-  <h1>GRAPHIC  </h1>
+  <h1  class="code"  >GRAPHIC  <br>  </h1>
 
-     <p>Graphic design is also closely related to emotional design, 
+     <p  class="code"  >Graphic design is also closely related to emotional design, 
     as designers must consider the emotions, expectations and
     beliefs of the viewer when creating images. This is where 
     color theory comes into play, as the chosen color palette 
@@ -36,7 +72,7 @@
     influences their emotional response to the design. For example, 
     red is a color often seen as a symbol of danger or alarm, 
     while blue is associated with the sea and sky and 
-    therefore encourages a calmer response. </p>
+    therefore encourages a calmer response. <br>  </p>
 
 
     <p><a href=" https://www.bitews.com/store" class="w3-button w3-blue"><i class=" fa fa-diamond w3-text-white"> </i> Let's Get Started</a></p>
@@ -50,15 +86,15 @@
 <div class="w3-card-4">
   <img src="29.jpg" alt="Car" style="width:100%">
   <div class="w3-container">
-  <h1>DESIGN  </h1>
+  <h1  class="code"  >DESIGN  <br>  </h1>
 
- <p> Graphic design plays an important role in the way consumers interact with, 
+ <p  class="code"  > Graphic design plays an important role in the way consumers interact with, 
     perceive and experience your brand. Therefore, it is important that you not 
     only understand the practice but also implement it in your company. Additionally, 
     the elements and principles of graphic design are applied to 
     communicate specific messages, establish brand identity, attract target audiences, 
     and improve user experience. 
-    All of this is necessary for your business to not only survive, but thrive. </p>
+    All of this is necessary for your business to not only survive, but thrive. <br>  </p>
 
 
      <p><a href=" https://www.bitews.com/order" class="w3-button w3-green"><i class="fa fa-globe w3-text-amber"> </i> Let's Get Started</a></p>
@@ -74,9 +110,9 @@
 <div class="w3-card-4">
   <img src="60.jpg" alt="Car" style="width:100%">
   <div class="w3-container">
-  <h1> LOGO </h1>
+  <h1  class="code"  > LOGO  <br> </h1>
 
- <p> Your logo differentiates your company from its competitors and is the most 
+ <p  class="code"  > Your logo differentiates your company from its competitors and is the most 
     important design element that represents your brand. It is often the
      first thing a target customer sees regarding your business and 
      therefore has the opportunity to make a good first impression and 
@@ -84,7 +120,7 @@
      crucial role in the success of your logo, the color palette also
      plays a crucial role. Graphic design uses color theory to ensure 
      that your logo's color palette conveys the right message to the right audience and
-     evokes the emotions you want them to feel when interacting with your brand.</p>
+     evokes the emotions you want them to feel when interacting with your brand.  <br> </p>
 
     <p><a href=" https://www.bitews.com/design" class="w3-button w3-pink"><i class=" fa fa-cloud w3-text-blue "> </i> Let's Get Started</a></p>
     
